--- a/index.html
+++ b/index.html
@@ -7,8 +7,36 @@
             content="width=device-width, initial-scale=1.0"
         />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="theme-color" content="#ffffff" />
         <title>Mirian Okradze | A Full-Stack Web Developer</title>
         <link rel="stylesheet" href="/assets/sass/main.scss" />
+
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/assets/img/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/assets/img/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/assets/img/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/assets/img/site.webmanifest" />
+        <link
+            rel="mask-icon"
+            href="/assets/img/safari-pinned-tab.svg"
+            color="#5bbad5"
+        />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="theme-color" content="#ffffff" />
     </head>
     <body>
         <header class="header">
@@ -18,9 +46,7 @@
                     <span id="toggle-icon">☰</span>
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link"
-                                >Home</a
-                            >
+                            <a href="#home" class="nav__link">Home</a>
                         </li>
                         <li class="nav__item">
                             <a href="#skills" class="nav__link"
@@ -28,16 +54,12 @@
                             >
                         </li>
                         <li class="nav__item">
-                            <a
-                                href="#projects"
-                                class="nav__link"
+                            <a href="#projects" class="nav__link"
                                 >Projects</a
                             >
                         </li>
                         <li class="nav__item">
-                            <a
-                                href="#contact"
-                                class="nav__link"
+                            <a href="#contact" class="nav__link"
                                 >Contact</a
                             >
                         </li>
@@ -56,9 +78,7 @@
                         <p class="main__heading--secondary">
                             A Full-Stack Web Developer
                         </p>
-                        <a
-                            href="#skills"
-                            class="btn btn--primary"
+                        <a href="#skills" class="btn btn--primary"
                             >View More</a
                         >
                     </div>
