--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <meta name="theme-color" content="#ffffff" />
         <title>Mirian Okradze | A Full-Stack Web Developer</title>
         <link rel="stylesheet" href="/assets/sass/main.scss" />
-
         <link
             rel="apple-touch-icon"
             sizes="180x180"
@@ -46,22 +45,24 @@
                     <span id="toggle-icon">☰</span>
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link">Home</a>
+                            <a href="#home" class="nav__link">
+                                Home
+                            </a>
                         </li>
                         <li class="nav__item">
-                            <a href="#skills" class="nav__link"
-                                >Skills</a
-                            >
+                            <a href="#skills" class="nav__link">
+                                Skills
+                            </a>
                         </li>
                         <li class="nav__item">
-                            <a href="#projects" class="nav__link"
-                                >Projects</a
-                            >
+                            <a href="#projects" class="nav__link">
+                                Projects
+                            </a>
                         </li>
                         <li class="nav__item">
-                            <a href="#contact" class="nav__link"
-                                >Contact</a
-                            >
+                            <a href="#contact" class="nav__link">
+                                Contact
+                            </a>
                         </li>
                     </ul>
                 </nav>
@@ -146,36 +147,152 @@
 
         <section class="section-projects" id="projects">
             <h2 class="heading-secondary">Recent Work</h2>
-            <p class="paragraph section-projects__paragraph">
-                Here are projects I've done. Wanna see more?
-                <a
-                    class="btn"
-                    href="mailto:okradzemirian@gmail.com"
-                    target="_blank"
-                    >Email Me</a
-                >
-            </p>
+            <div class="container">
+                <p class="paragraph section-projects__paragraph">
+                    Here are projects I've done. Wanna see more?
+                    <a
+                        class="btn"
+                        href="mailto:okradzemirian@gmail.com"
+                        target="_blank"
+                        >Email Me</a
+                    >
+                </p>
+            </div>
+
             <div class="container">
                 <div class="projects">
-                    <figure class="project">
-                        <img
-                            class="project__img"
-                            src="/assets/img/hero.jpg"
-                            alt="Airbnb"
-                        />
-                        <figcaption class="project__fig">
-                            <p class="project__paragraph">
-                                Helping people to rent homes when
-                                tripping around the world.
-                            </p>
-                            <a
-                                href=""
-                                class="btn btn--primary"
-                                target="_blank"
-                                >Visit Website</a
-                            >
-                        </figcaption>
-                    </figure>
+                    <div class="project-wrapper">
+                        <figure class="project">
+                            <img
+                                class="project__img"
+                                src="/assets/img/hero.jpg"
+                                alt="Airbnb"
+                            />
+                            <figcaption class="project__fig">
+                                <p class="project__paragraph">
+                                    Helping people to rent homes when
+                                    tripping around the world.
+                                </p>
+                                <a
+                                    href=""
+                                    class="btn btn--primary"
+                                    target="_blank"
+                                    >Visit Website</a
+                                >
+                            </figcaption>
+                            <div class="project__overlay"></div>
+                        </figure>
+                    </div>
+                    <div class="project-wrapper">
+                        <figure class="project">
+                            <img
+                                class="project__img"
+                                src="/assets/img/hero.jpg"
+                                alt="Airbnb"
+                            />
+                            <figcaption class="project__fig">
+                                <p class="project__paragraph">
+                                    Helping people to rent homes when
+                                    tripping around the world.
+                                </p>
+                                <a
+                                    href=""
+                                    class="btn btn--primary"
+                                    target="_blank"
+                                    >Visit Website</a
+                                >
+                            </figcaption>
+                            <div class="project__overlay"></div>
+                        </figure>
+                    </div>
+                    <div class="project-wrapper">
+                        <figure class="project">
+                            <img
+                                class="project__img"
+                                src="/assets/img/hero.jpg"
+                                alt="Airbnb"
+                            />
+                            <figcaption class="project__fig">
+                                <p class="project__paragraph">
+                                    Helping people to rent homes when
+                                    tripping around the world.
+                                </p>
+                                <a
+                                    href=""
+                                    class="btn btn--primary"
+                                    target="_blank"
+                                    >Visit Website</a
+                                >
+                            </figcaption>
+                            <div class="project__overlay"></div>
+                        </figure>
+                    </div>
+                    <div class="project-wrapper">
+                        <figure class="project">
+                            <img
+                                class="project__img"
+                                src="/assets/img/hero.jpg"
+                                alt="Airbnb"
+                            />
+                            <figcaption class="project__fig">
+                                <p class="project__paragraph">
+                                    Helping people to rent homes when
+                                    tripping around the world.
+                                </p>
+                                <a
+                                    href=""
+                                    class="btn btn--primary"
+                                    target="_blank"
+                                    >Visit Website</a
+                                >
+                            </figcaption>
+                            <div class="project__overlay"></div>
+                        </figure>
+                    </div>
+                    <div class="project-wrapper">
+                        <figure class="project">
+                            <img
+                                class="project__img"
+                                src="/assets/img/hero.jpg"
+                                alt="Airbnb"
+                            />
+                            <figcaption class="project__fig">
+                                <p class="project__paragraph">
+                                    Helping people to rent homes when
+                                    tripping around the world.
+                                </p>
+                                <a
+                                    href=""
+                                    class="btn btn--primary"
+                                    target="_blank"
+                                    >Visit Website</a
+                                >
+                            </figcaption>
+                            <div class="project__overlay"></div>
+                        </figure>
+                    </div>
+                    <div class="project-wrapper">
+                        <figure class="project">
+                            <img
+                                class="project__img"
+                                src="/assets/img/hero.jpg"
+                                alt="Airbnb"
+                            />
+                            <figcaption class="project__fig">
+                                <p class="project__paragraph">
+                                    Helping people to rent homes when
+                                    tripping around the world.
+                                </p>
+                                <a
+                                    href=""
+                                    class="btn btn--primary"
+                                    target="_blank"
+                                    >Visit Website</a
+                                >
+                            </figcaption>
+                            <div class="project__overlay"></div>
+                        </figure>
+                    </div>
                 </div>
             </div>
         </section>
@@ -215,17 +332,19 @@
         </footer>
 
         <script>
-            const nav = document.querySelector('.nav__list');
+            var nav = document.querySelector('.nav__list');
             document
                 .getElementById('toggle-icon')
-                .addEventListener('click', () => {
+                .addEventListener('click', function() {
                     nav.classList.toggle('toggle-nav');
                 });
-            document.querySelectorAll('.nav__link').forEach(el => {
-                el.addEventListener('click', () => {
-                    nav.classList.toggle('toggle-nav');
+            document
+                .querySelectorAll('.nav__link')
+                .forEach(function(el) {
+                    el.addEventListener('click', function() {
+                        nav.classList.toggle('toggle-nav');
+                    });
                 });
-            });
         </script>
     </body>
 </html>
