Changed minor things

--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
             content="width=device-width, initial-scale=1.0"
         />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <meta
+            name="description"
+            content="A Full Stack Web Developer"
+        />
+        <meta
+            name="keywords"
+            content="html, css, javascript, web developer"
+        />
+        <meta name="author" content="Mirian Okradze" />
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="theme-color" content="#ffffff" />
-        <title>Mirian Okradze | A Full-Stack Web Developer</title>
+
+        <title>Mirian Okradze | A Full Stack Web Developer</title>
         <link rel="stylesheet" href="/assets/sass/main.scss" />
         <link
             rel="apple-touch-icon"
@@ -77,7 +87,7 @@
                             Mirian Okradze
                         </h1>
                         <p class="main__heading--secondary">
-                            A Full-Stack Web Developer
+                            A Full Stack Web Developer
                         </p>
                         <a href="#skills" class="btn btn--primary"
                             >View More</a
@@ -110,6 +120,7 @@
                             <li class="tech__item">HTML</li>
                             <li class="tech__item">CSS</li>
                             <li class="tech__item">Sass</li>
+                            <li class="tech__item">JavaScript</li>
                             <li class="tech__item">React</li>
                         </ul>
                     </div>
