Changed project component style

--- a/index.html
+++ b/index.html
@@ -168,142 +168,15 @@
                         >Email Me</a
                     >
                 </p>
-            </div>
 
-            <div class="container">
                 <div class="projects">
-                    <div class="project-wrapper">
-                        <figure class="project">
-                            <img
-                                class="project__img"
-                                src="/assets/img/hero.jpg"
-                                alt="Airbnb"
-                            />
-                            <figcaption class="project__fig">
-                                <p class="project__paragraph">
-                                    Helping people to rent homes when
-                                    tripping around the world.
-                                </p>
-                                <a
-                                    href=""
-                                    class="btn btn--primary"
-                                    target="_blank"
-                                    >Visit Website</a
-                                >
-                            </figcaption>
-                            <div class="project__overlay"></div>
-                        </figure>
-                    </div>
-                    <div class="project-wrapper">
-                        <figure class="project">
-                            <img
-                                class="project__img"
-                                src="/assets/img/hero.jpg"
-                                alt="Airbnb"
-                            />
-                            <figcaption class="project__fig">
-                                <p class="project__paragraph">
-                                    Helping people to rent homes when
-                                    tripping around the world.
-                                </p>
-                                <a
-                                    href=""
-                                    class="btn btn--primary"
-                                    target="_blank"
-                                    >Visit Website</a
-                                >
-                            </figcaption>
-                            <div class="project__overlay"></div>
-                        </figure>
-                    </div>
-                    <div class="project-wrapper">
-                        <figure class="project">
-                            <img
-                                class="project__img"
-                                src="/assets/img/hero.jpg"
-                                alt="Airbnb"
-                            />
-                            <figcaption class="project__fig">
-                                <p class="project__paragraph">
-                                    Helping people to rent homes when
-                                    tripping around the world.
-                                </p>
-                                <a
-                                    href=""
-                                    class="btn btn--primary"
-                                    target="_blank"
-                                    >Visit Website</a
-                                >
-                            </figcaption>
-                            <div class="project__overlay"></div>
-                        </figure>
-                    </div>
-                    <div class="project-wrapper">
-                        <figure class="project">
-                            <img
-                                class="project__img"
-                                src="/assets/img/hero.jpg"
-                                alt="Airbnb"
-                            />
-                            <figcaption class="project__fig">
-                                <p class="project__paragraph">
-                                    Helping people to rent homes when
-                                    tripping around the world.
-                                </p>
-                                <a
-                                    href=""
-                                    class="btn btn--primary"
-                                    target="_blank"
-                                    >Visit Website</a
-                                >
-                            </figcaption>
-                            <div class="project__overlay"></div>
-                        </figure>
-                    </div>
-                    <div class="project-wrapper">
-                        <figure class="project">
-                            <img
-                                class="project__img"
-                                src="/assets/img/hero.jpg"
-                                alt="Airbnb"
-                            />
-                            <figcaption class="project__fig">
-                                <p class="project__paragraph">
-                                    Helping people to rent homes when
-                                    tripping around the world.
-                                </p>
-                                <a
-                                    href=""
-                                    class="btn btn--primary"
-                                    target="_blank"
-                                    >Visit Website</a
-                                >
-                            </figcaption>
-                            <div class="project__overlay"></div>
-                        </figure>
-                    </div>
-                    <div class="project-wrapper">
-                        <figure class="project">
-                            <img
-                                class="project__img"
-                                src="/assets/img/hero.jpg"
-                                alt="Airbnb"
-                            />
-                            <figcaption class="project__fig">
-                                <p class="project__paragraph">
-                                    Helping people to rent homes when
-                                    tripping around the world.
-                                </p>
-                                <a
-                                    href=""
-                                    class="btn btn--primary"
-                                    target="_blank"
-                                    >Visit Website</a
-                                >
-                            </figcaption>
-                            <div class="project__overlay"></div>
-                        </figure>
-                    </div>
+                    <a href="#" class="project">
+                        <img
+                            class="project__img"
+                            src="/assets/img/hero.jpg"
+                            alt="Airbnb"
+                        />
+                    </a>
                 </div>
             </div>
         </section>
