--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
         />
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="theme-color" content="#ffffff" />
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-136314426-2"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-136314426-2');
+        </script>
     </head>
     <body>
         <header class="header">
