--- a/index.html
+++ b/index.html
@@ -46,19 +46,6 @@
         />
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="theme-color" content="#ffffff" />
-        <script
-            async
-            src="https://www.googletagmanager.com/gtag/js?id=UA-136314426-2"
-        ></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
-
-            gtag('config', 'UA-136314426-2');
-        </script>
     </head>
     <body>
         <header class="header">
@@ -210,7 +197,7 @@
             <div class="footer__content">
                 <div class="footer__media">
                     <a
-                        href="https://github.com/oqradzemirian"
+                        href="https://github.com/okradzemirian"
                         target="_blank"
                         rel="noopener noreferrer"
                     >
